default/objects/E2E_Data_Product__c/E2E_Data_Product__c.object-meta.xml
<CustomObject>
    <label>E2E Data Product</label>
    <nameField>
        <label>E2E Data Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>E2E Data Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>