default/objects/E2E_Data_Product__c/fields/E2E_Data_Object__c.field-meta.xml
<CustomField>
    <fullName>E2E_Data_Object__c</fullName>
    <label>E2E Data Object</label>
    <referenceTo>E2E_Data_Object__c</referenceTo>
    <relationshipLabel>E2E Data Products</relationshipLabel>
    <relationshipName>E2E_Data_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>