default/objects/E2E_Data_Product__c/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <label>ProductID</label>
    <length>21</length>
    <type>Text</type>
</CustomField>