default/objects/E2E_Data_Product__c/fields/Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Type_ID__c</fullName>
    <label>Type ID</label>
    <length>21</length>
    <type>Text</type>
</CustomField>