default/objects/E2E_Data_Product__c/fields/Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Type_Name__c</fullName>
    <label>Type Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>