default/objects/E2E_Data_Product__c/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <label>Product</label>
</RecordType>