default/objects/E2E_Data_Product__c/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <label>Service</label>
</RecordType>